@@ -24,6 +24,7 @@ Fix dropbox download url (common mistake, replace dl=0 with dl=1) in Download-Fi
 Issue #2076 CmdLet Copy-AlSourceFiles can't be used on BC 19x
 Issue #2079 don't create a user if no users are in the database when running Run-TestsInBcContainer
 Add CompanyName to Run-AlPipeline to support running tests in a specific company
+Issue #2084 Add parameter TestRunnerCodeunitId to Run-TestsInBcContainer
 
 2.0.15
 Default to process isolation when Host OS is 21H1 and Container OS is 2004
